2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/24_float.deca
// Description:
//    Programme  avec plusieurs cas des foats  
// Resultats:
//      programme correcte 
//
// Historique:
//    cree le 09/01/2024
{
    float z = 0.5;
    float x = 0x1.0p-1;
    float x = 0xffff.0p-1;
    float x = 0x9.0p-1;
    float x = 0x0.1p-1;
    float y = 0xff4;
    float y = 0x9;
    
}