2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/29_FNeq.deca
// Description:
//    tests de programme incorrect syntaxiquement ,NEQ incorrecte car absence du membre gauche
//
// Resultats:
//    ligne 11 : Erreur, mismatched input ';'
//
// Historique:
//    cree le 09/01/2024
{
    float x = 0.5;
    x != ; 
}